templates/microservice/kube/ingress/${MICROSERVICE_NAME}.ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${MICROSERVICE_NAME}-microservice-ingress
  labels:
      name: ${MICROSERVICE_NAME}-microservice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: example.com # your production domain goes here
    http:
      paths:
      - pathType: Prefix
        path: "/(/|$)(.*)"
        backend:
          service:
            name: ${MICROSERVICE_NAME}-service
            port: 
              number: 80
